force-app/main/default/objects/Division_Target_Forecast_Actual__c/fields/actual_actual_amount__c.field-meta.xml
<CustomField>
    <fullName>actual_actual_amount__c</fullName>
    <formula>IF( OR(TEXT(Gubun__c)=&quot;실적&quot;, TEXT(Gubun__c)=&quot;Actual&quot;), Sales_Actual_amount__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>실적_실적</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>