force-app/main/default/objects/Division_Target_Forecast_Actual__c/fields/AmountDivide8__c.field-meta.xml
<CustomField>
    <fullName>AmountDivide8__c</fullName>
    <formula>Amount__c /100000000</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AmountDivide8</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>