force-app/main/default/objects/Division_Target_Forecast_Actual__c/fields/DeliveryOrgLv1__c.field-meta.xml
<CustomField>
    <fullName>DeliveryOrgLv1__c</fullName>
    <label>Delivery Org Lv1</label>
    <length>100</length>
    <type>Text</type>
</CustomField>