force-app/main/default/objects/Division_Target_Forecast_Actual__c/fields/DeliveryOrgLv2__c.field-meta.xml
<CustomField>
    <fullName>DeliveryOrgLv2__c</fullName>
    <label>Delivery Org Lv2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>