force-app/main/default/objects/Division_Target_Forecast_Actual__c/fields/External_Internal__c.field-meta.xml
<CustomField>
    <fullName>External_Internal__c</fullName>
    <label>External_Internal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Internal</fullName>
                <color>#33CCFF</color>
                <label>Internal</label>
            </value>
            <value>
                <fullName>External</fullName>
                <color>#FF99FF</color>
                <label>External</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>