force-app/main/default/objects/Division_Target_Forecast_Actual__c/fields/Gubun__c.field-meta.xml
<CustomField>
    <fullName>Gubun__c</fullName>
    <label>Gubun</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Forecast</fullName>
                <color>#FFCC66</color>
                <label>Forecast</label>
            </value>
            <value>
                <fullName>Actual</fullName>
                <color>#FF99FF</color>
                <label>Actual</label>
            </value>
            <value>
                <fullName>Target</fullName>
                <isActive>false</isActive>
                <label>Target</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>