force-app/main/default/objects/Division_Target_Forecast_Actual__c/fields/Org_L1__c.field-meta.xml
<CustomField>
    <fullName>Org_L1__c</fullName>
    <description>보고 기준조직 Level 1</description>
    <label>Org L1</label>
    <length>100</length>
    <type>Text</type>
</CustomField>