force-app/main/default/objects/Division_Target_Forecast_Actual__c/fields/ReportDate__c.field-meta.xml
<CustomField>
    <fullName>ReportDate__c</fullName>
    <description>계획/전망/실적을 보고하는 기준이 되는 보고일자
구체적인 보고일자를 사용하지는 않으며 Report에서 Relative 필터를 사용하기 위해 날짜형 필드를 생성함
이 날짜형 필드는 반드시 관련된 다른 Report Year, Report Month와도 데이터 정합성이 일치해야 함.</description>
    <label>Report Date</label>
    <type>Date</type>
</CustomField>