force-app/main/default/objects/Division_Target_Forecast_Actual__c/fields/ReportMonth__c.field-meta.xml
<CustomField>
    <fullName>ReportMonth__c</fullName>
    <formula>TEXT(YEAR(ReportDate__c)) &amp; &quot;/&quot; &amp; IF(Month(ReportDate__c) &lt; 10, &quot;0&quot; &amp; TEXT(Month(ReportDate__c)), TEXT(Month(ReportDate__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Report Month</label>
    <type>Text</type>
</CustomField>