force-app/main/default/objects/Division_Target_Forecast_Actual__c/fields/Required_BO_amount__c.field-meta.xml
<CustomField>
    <fullName>Required_BO_amount__c</fullName>
    <description>필요BO 금액</description>
    <inlineHelpText>필요BO 금액</inlineHelpText>
    <label>필요BO 금액(억)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>