force-app/main/default/objects/Division_Target_Forecast_Actual__c/fields/Residual_Target_amount__c.field-meta.xml
<CustomField>
    <fullName>Residual_Target_amount__c</fullName>
    <description>잔여목표 금액</description>
    <inlineHelpText>잔여목표 금액</inlineHelpText>
    <label>잔여목표 금액(억)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>