force-app/main/default/objects/Division_Target_Forecast_Actual__c/fields/Sales_Target_amount__c.field-meta.xml
<CustomField>
    <fullName>Sales_Target_amount__c</fullName>
    <description>수주목표 금액</description>
    <inlineHelpText>수주목표 금액</inlineHelpText>
    <label>수주목표 금액(억)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>