force-app/main/default/objects/Division_Target_Forecast_Actual__c/fields/SalesDepartment__c.field-meta.xml
<CustomField>
    <fullName>SalesDepartment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Department</label>
    <referenceTo>CostCenter__c</referenceTo>
    <relationshipName>Division_Plan_Forecast_Result</relationshipName>
    <type>Lookup</type>
</CustomField>