force-app/main/default/objects/Division_Target_Forecast_Actual__c/fields/Secured_BO_amount__c.field-meta.xml
<CustomField>
    <fullName>Secured_BO_amount__c</fullName>
    <description>BO 확보연황 금액(억)</description>
    <inlineHelpText>BO 확보연황 금액(억)</inlineHelpText>
    <label>BO 확보연황 금액(억)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>