force-app/main/default/objects/Division_Target_Forecast_Actual__c/fields/Secured_Lead_amount__c.field-meta.xml
<CustomField>
    <fullName>Secured_Lead_amount__c</fullName>
    <description>Lead확보현황 금액(억)</description>
    <inlineHelpText>Lead확보현황 금액(억)</inlineHelpText>
    <label>Lead확보현황 금액(억)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>