force-app/main/default/objects/Division_Target_Forecast_Actual__c/fields/Secured_Lead_BO_amount_VS_Required_BO__c.field-meta.xml
<CustomField>
    <fullName>Secured_Lead_BO_amount_VS_Required_BO__c</fullName>
    <description>필요BO 비 확보현황(금액)(억)</description>
    <inlineHelpText>필요BO 비 확보현황(금액)(억)</inlineHelpText>
    <label>필요BO 비 확보현황(금액)(억)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>