force-app/main/default/objects/Division_Target_Forecast_Actual__c/fields/sokbo_actual_amount__c.field-meta.xml
<CustomField>
    <fullName>sokbo_actual_amount__c</fullName>
    <formula>IF( OR(TEXT(Gubun__c)=&quot;속보&quot;, TEXT(Gubun__c)=&quot;Forecast&quot;), Sales_Actual_amount__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>속보_실적</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>