force-app/main/default/objects/Division_Target_Forecast_Actual__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>External_Internal__c</columns>
    <columns>Org_L2__c</columns>
    <columns>Org_L3__c</columns>
    <columns>ReportMonth__c</columns>
    <columns>ReportDate__c</columns>
    <columns>Gubun__c</columns>
    <columns>Sales_Target_amount__c</columns>
    <columns>Sales_Actual_amount__c</columns>
    <columns>Residual_Target_amount__c</columns>
    <columns>Required_BO_amount__c</columns>
    <columns>Secured_Lead_amount__c</columns>
    <columns>Secured_BO_amount__c</columns>
    <columns>Secured_Lead_BO_amount__c</columns>
    <columns>Secured_Lead_BO_amount_VS_Required_BO__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>